v11/docs/ModelsSecurityCertificatePermissions.md
# ModelsSecurityCertificatePermissions

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**Roles** | Pointer to [**[]ModelsSecuritySecurityRolesSecurityRoleResponseBase**](ModelsSecuritySecurityRolesSecurityRoleResponseBase.md) |  | [optional] 

## Methods

### NewModelsSecurityCertificatePermissions

`func NewModelsSecurityCertificatePermissions() *ModelsSecurityCertificatePermissions`

NewModelsSecurityCertificatePermissions instantiates a new ModelsSecurityCertificatePermissions object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewModelsSecurityCertificatePermissionsWithDefaults

`func NewModelsSecurityCertificatePermissionsWithDefaults() *ModelsSecurityCertificatePermissions`

NewModelsSecurityCertificatePermissionsWithDefaults instantiates a new ModelsSecurityCertificatePermissions object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetRoles

`func (o *ModelsSecurityCertificatePermissions) GetRoles() []ModelsSecuritySecurityRolesSecurityRoleResponseBase`

GetRoles returns the Roles field if non-nil, zero value otherwise.

### GetRolesOk

`func (o *ModelsSecurityCertificatePermissions) GetRolesOk() (*[]ModelsSecuritySecurityRolesSecurityRoleResponseBase, bool)`

GetRolesOk returns a tuple with the Roles field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetRoles

`func (o *ModelsSecurityCertificatePermissions) SetRoles(v []ModelsSecuritySecurityRolesSecurityRoleResponseBase)`

SetRoles sets Roles field to given value.

### HasRoles

`func (o *ModelsSecurityCertificatePermissions) HasRoles() bool`

HasRoles returns a boolean if a field has been set.

### SetRolesNil

`func (o *ModelsSecurityCertificatePermissions) SetRolesNil(b bool)`

 SetRolesNil sets the value for Roles to be an explicit nil

### UnsetRoles
`func (o *ModelsSecurityCertificatePermissions) UnsetRoles()`

UnsetRoles ensures that no value is present for Roles, not even an explicit nil

[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


